--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
       <!-- first row of images -->
       <div class="row">
         <div class="column">
-          <img src="slayer.jpeg" alt="Tengen Uzui from Demon Slayer" style="width:100%" onclick="showAnimeCharacter('<strong>Tengen Uzui from Demon slayer.</strong> <br> I personally refer to him as flashy guy hahah. He has a flamboyant personality and lives for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities. A true strong leader to the main character when they go on missions');">
+          <img src="slayer.jpeg" alt="Tengen Uzui from Demon Slayer" style="width:100%" onclick="showAnimeCharacter('<strong>Tengen Uzui from Demon slayer.</strong> <br> I personally refer to him as flashy guy hahah. He has a flamboyant personality and lives for entertainment. I love how confident and charismatic he is and unafraid to show off his skills and abilities. A true strong leader to the main character when they go on missions.');">
         </div>
 
         <div class="column">
@@ -419,7 +419,7 @@
         </div>
 
         <div class="column">
-          <img src="horimiya.jpeg" alt="horimiya from horimiya" style="width:100%" onclick="showAnimeCharacter('<strong>Horimiya from Horimiya lol</strong>,<br> is such a relatable character to my personal experience at school when first arriving in Canada.<br> This guy is an introvert who has been judged by his cover. By simply appearing different he was outcasted. I love how he portrayed his emotions of not only being true to himself but also portrayed how lonely he felt. But slowly with the help of his girlfriend, Hiromi learns how to connect with others. He helps me realize that friends and connections are important just being isolated can be nice and cozy, but it can also become lonely to an unbearable level.');">
+          <img src="horimiya.jpeg" alt="horimiya from horimiya" style="width:100%" onclick="showAnimeCharacter('<strong>Horimiya from Horimiya lol</strong>,<br> is such a relatable character to my personal experience at school when first arriving in Canada.<br> This guy is an introvert who has been judged by his cover. By simply appearing different he was outcasted. I love how he portrayed his emotions and stayed true to himself by also portraying how lonely he felt. But slowly with the help of his girlfriend, Hiromi learns how to connect with others. He helps me realize that friends and connections are important just being isolated can be nice and cozy, but it can also become lonely to an unbearable level.');">
         </div>
 
         <div class="column">
@@ -428,15 +428,15 @@
 
         <!-- Second row of images -->
         <div class="column">
-          <img src="chineses anime .jpeg" alt="Qian Yun Xi from Psychic princess (Tong Ling Fei)." style="width:100%" onclick="showAnimeCharacter('<strong>Qian Yun Xi from Psychic princess (Tong Ling Fei).</strong><br>This anime is the only Chinese anime I know, and Qian Yun Xi is my favorite. She is very kind, strong willed and extremely funny. She come off as being an extremely innocent girl, but she is very energetic, smart, and strong. The whole show is simply hilarious to watch because of her.');">
+          <img src="chineses anime .jpeg" alt="Qian Yun Xi from Psychic princess (Tong Ling Fei)." style="width:100%" onclick="showAnimeCharacter('<strong>Qian Yun Xi from Psychic princess (Tong Ling Fei).</strong><br>This anime is the only Chinese anime I know, and Qian Yun Xi is my favorite. She is very kind, strong willed and extremely funny. She comes off as being an extremely innocent girl, but she is very energetic, smart, and strong. The whole show is simply hilarious to watch because of her.');">
         </div>
 
         <div class="column">
-          <img src="SashaBlouse.jpg" alt="Sasha from Attack on Titan" style="width:100%" onclick="showAnimeCharacter('<strong>Sasha also known as Potato girl from Attack on Titan</strong> <br> is one of my favorites from that anime. She is friendly and has an incredible appetite. she’s mean yet kind, caring yet heartless especially when it comes to food. All in all, a true friend. In time of terror and death, she brings normalcy to the group with either her humor or love for food. Though passionate in what she believes in, she’s scared just like anyone but as a soldier, she always stand in the face of danger for FOOD and her friends. ');">
+          <img src="SashaBlouse.jpg" alt="Sasha from Attack on Titan" style="width:100%" onclick="showAnimeCharacter('<strong>Sasha also known as Potato girl from Attack on Titan</strong> <br> is one of my favorites from that anime. She is friendly and has an incredible appetite. She’s mean yet kind, caring yet heartless especially when it comes to food. All in all, a true friend. In times of terror and death, she brings normalcy to the group with either her humor or love for food. Though passionate in what she believes in, she’s scared just like anyone but as a soldier, she always stand in the face of danger for FOOD and her friends.');">
         </div>
 
         <div class="column">
-          <img src="mikey .jpeg" alt="Mikey from Tokyo revengers" style="width:100%" onclick="showAnimeCharacter('<strong>Mikey from Tokyo revengers </strong> <br> is simply blessed with unparallel charisma. I love him because he fears no one, respect and admire himself lol. <br> He possesses immense superior strength compared to other delinquent fighters throughout the series. I also like him because he is a complicated character where people often debate whether he is good or bad.<br> This makes the show interesting to watch.');">
+          <img src="mikey .jpeg" alt="Mikey from Tokyo revengers" style="width:100%" onclick="showAnimeCharacter('<strong>Mikey from Tokyo revengers </strong> <br> is simply blessed with unparallel charisma. I love him because he fears no one, respects and admires himself. <br> He possesses immense superior strength compared to other delinquent fighters throughout the series. I also like him because he is a complicated character where people often debate whether he is good or bad.<br> This makes the show interesting to watch.');">
         </div>
 
         <div class="column">
